# bahmni-dhis2-etl

./: .env  .gitignore  Dockerfile  database.sql  docker-compose.yaml  pyproject.toml  readme.md  table_changes.sql
config/: airflow.cfg
dags/bahmni-dhis-integration/: bahmno-dhis-integration.py
include/sql/: opd_report.sql
